# DjangoProject

./: README.md  catalog.json  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_del_conf.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  form.py  models.py  urls.py  views.py
catalog/management/commands/: add_test_prod.py
catalog/migrations/: 0001_initial.py  0002_alter_products_created_at_alter_products_updated_at.py  0003_products_views_counter.py
catalog/templates/: base.html  contacts.html  home.html  product_del_conf.html  product_form.html  products_details.html  products_list.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
